# ibmdecert_capstoneprj

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
labs_instructions/: mod01.md  mod02.md  mod03a.md  mod03b.md  mod05.md  mod05b.md
module01/: README.md  datadump.sh  sales_data.sql
module02/: README.md  electronics.csv
module03/: README.md
module03/lab01/: README.md
module03/lab02/: README.md
module05/lab01/: README.md  automation.py  mysqlconnect.py  postgresqlconnect.py
module05/lab02/: README.md
module05/lab02/airflow/dags/: process_web_log.py
module05/lab02/airflow/dags/capstone/: weblog.tar
module06/: Bigdata and Spark_Spark_MLOps_v3.ipynb
