[project]
name = "ibmdecert-capstoneprj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "mysql-connector-python>=9.7.0",
    "numpy>=2.4.6",
    "psycopg2-binary>=2.9.12",
    "pyspark>=4.1.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.2.2",
    "ipykernel>=7.3.0",
]
